--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # protect api key from outside access
 # REACT_APP_API_KEY=892379847489r79874398 # not real
 
-FIREBASE_API_KEY="AIzaSyD5ZGNEJ3jlDLKmr6Ajeekr4BCS52BbWcY"
+FIREBASE_API_KEY="rudhe"
 FIREBASE_AUTH_DOMAIN="recipe-react-app-ad1cc.firebaseapp.com"
 FIREBASE_PROJECT_ID="recipe-react-app-ad1cc"
 FIREBASE_STORAGE_BUCKET="recipe-react-app-ad1cc.appspot.com"
