change firebase api key

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # protect api key from outside access
 # REACT_APP_API_KEY=892379847489r79874398 # not real
 
-FIREBASE_API_KEY="rudhe"
+FIREBASE_API_KEY="AIzaSyC_OdTVHp2VXg_rOJCNO9jMQsmjlEUUZBw"
 FIREBASE_AUTH_DOMAIN="recipe-react-app-ad1cc.firebaseapp.com"
 FIREBASE_PROJECT_ID="recipe-react-app-ad1cc"
 FIREBASE_STORAGE_BUCKET="recipe-react-app-ad1cc.appspot.com"
