--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
   },
   "scripts": {
     "dev": "set PORT=3006 && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
