--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 # protect api key from outside access
 # REACT_APP_API_KEY=892379847489r79874398 # not real
 
-REACT_APP_FIREBASE_API_KEY="AIzaSyC_OdTVHp2VXg_rOJCNO9jMQsmjlEUUZBw"
-REACT_APP_FIREBASE_AUTH_DOMAIN="recipe-react-app-ad1cc.firebaseapp.com"
-REACT_APP_FIREBASE_PROJECT_ID="recipe-react-app-ad1cc"
-REACT_APP_FIREBASE_STORAGE_BUCKET="recipe-react-app-ad1cc.appspot.com"
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID="399401014732"
-REACT_APP_FIREBASE_APP_ID="1:399401014732:web:36cd5959d9bb1e4b9ef969"
+VITE_FIREBASE_API_KEY="AIzaSyC_OdTVHp2VXg_rOJCNO9jMQsmjlEUUZBw"
+VITE_FIREBASE_AUTH_DOMAIN="recipe-react-app-ad1cc.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="recipe-react-app-ad1cc"
+VITE_FIREBASE_STORAGE_BUCKET="recipe-react-app-ad1cc.appspot.com"
+VITE_FIREBASE_MESSAGING_SENDER_ID="399401014732"
+VITE_FIREBASE_APP_ID="1:399401014732:web:36cd5959d9bb1e4b9ef969"
