--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "set PORT=3006 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -29,14 +29,14 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.10.1",
+    "react-markdown": "^10.1.0",
     "react-redux": "^8.1.2",
     "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-firestore": "^2.0.1",
     "redux-thunk": "^2.4.2",
-    "styled-components": "^5.3.5",
+    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
@@ -56,5 +56,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-redux": "^7.1.34",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.2.7"
   }
 }
